changed nav spacing and (think) fixed works cited

--- a/conclusionstyle.css
+++ b/conclusionstyle.css
@@ -11,7 +11,7 @@
   
   header {
     background-color: rgba(var(--title-background-color), 0.7);
-    padding-top: 2%;
+    padding-top: 15px;
     text-align: center; 
     text-transform: uppercase;
     letter-spacing: 1rem;
