--- a/counterstyle.css
+++ b/counterstyle.css
@@ -12,7 +12,7 @@ body {
   
 header {
   background-color: rgba(var(--title-background-color), 0.7);
-  padding-top: 2%;
+  padding-top: 15px;
   text-align: left; 
   padding-left: 2rem;
   border-bottom: 10px solid rgb(49,49,49);
