--- a/reasonsstyle.css
+++ b/reasonsstyle.css
@@ -11,7 +11,7 @@
   
   header {
     background-color: rgba(var(--title-background-color), 0.7);
-    padding-top: 2%;
+    padding-top: 15px;
     text-align: left; 
     padding-left: 2rem;
     border-bottom: 10px solid rgb(49,49,49);
